--- a/styles/global.css
+++ b/styles/global.css
@@ -13,7 +13,7 @@ body {
 }
 
 a {
-  color: #0070f3;
+  color: #055fc7;
   text-decoration: none;
 }
 
@@ -24,4 +24,9 @@ a:hover {
 img {
   max-width: 100%;
   display: block;
+}
+
+code {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 4px;
 }
