--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -41,10 +41,17 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  display: block;
 }
 
 .listItem {
-  margin: 0 0 1.25rem;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;  padding: 16px;
+  margin: 16px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .lightText {
